Project Title Alignment
Changed from left to center

--- a/res/css/resume.css
+++ b/res/css/resume.css
@@ -75,7 +75,10 @@ h2 {
     text-align: left;
 }
 
-.card-body .card-title,
+.card-body .card-title {
+    text-align: center;
+}
+
 .card-body .card-text {
     text-align: left;
 }
