--- a/res/css/resume.css
+++ b/res/css/resume.css
@@ -134,22 +134,21 @@ h2 {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: #000;
-    color: rgba(0, 0, 0, 0.8);
+    color: rgba(60, 60, 60, 0.8);
     border: 0;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: #000;
+    color: #fff;
 }
 
 .navbar-dark .navbar-nav .nav-link:focus {
-    color: #000;
+    color: #fff;
     outline: 0;
 }
 
 .navbar-dark .navbar-brand {
-    color: #000;
+    color: rgba(60, 60, 60, 0.8);
     font-weight: 600;
     font-size: 20px;
 }
