--- a/res/css/media-queries.css
+++ b/res/css/media-queries.css
@@ -179,13 +179,11 @@
         width: 32px;
         height: 32px;
     }
-    h1,
-    h2 {
-        font-size: 32px;
+    .display-3 {
+        font-size: 28px;
     }
-    .display-3,
-    h4 .display-5 {
-        font-size: 32px;
+    .display-5 {
+        font-size: 20px;
     }
 }
 
