--- a/res/css/resume.css
+++ b/res/css/resume.css
@@ -38,13 +38,21 @@ a:focus {
 }
 
 h1,
-h2 {
+h4 {
     margin-top: 10px;
     font-family: 'Montserrat', sans-serif;
-    font-size: 38px;
-    font-weight: 300;
     color: #555;
     line-height: 50px;
+}
+
+h1 {
+    font-size: 38px;
+    font-weight: 400;
+}
+
+h4 {
+    font-size: 32px;
+    font-weight: 200;
 }
 
 .jumbotron {
